...
    );

    return (
        <>
            <GestureDetector gesture={composedGesture}>
                <Pressable
                    testID="active-session-row"
                    style={[
                        styles.sessionRow,
                        showBorder && styles.sessionRowWithBorder,
                        selected && styles.sessionRowSelected
                    ]}
                    onPress={handlePress}
...
